Alt texts are rendered horizontally in vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=135383

Reviewed by Antti Koivisto.

Add support for painting vertical alt text.

* LayoutTests/fast/images/image-alt-text-vertical-expected.html: Added.
* LayoutTests/fast/images/image-alt-text-vertical.html: Added.
* Source/WebCore/rendering/RenderImage.cpp:
(WebCore::RenderImage::paintReplaced):

Canonical link: https://commits.webkit.org/263776@main